--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ a:active {
 		</div>
 		<div class="row1">
 			<div class="links col-sm-3 text-right">
-				<p><a class="link" href="file:///C:/Users/user/Documents/Michael%20Wilson,%20Resume.pdf">Resume</a></p>
+				<p><a class="link" href="./Michael%20Wilson,%20Resume.pdf">Resume</a></p>
 				<p><a class="link" href="https://www.linkedin.com/in/michaelianwilson96">LinkedIn</a></p>
 				<p><a class="link" href="https://github.com/mwilson96">Github</a></p>
 			</div>
 			<div class="image col-sm-2">
-				<img src="file:///C:/Users/user/Documents/picofme.jpg" alt="Michael Wilson" style="width:150px;height:150px">
+				<img src="./picofme.jpg" alt="Michael Wilson" style="width:150px;height:150px">
 			</div>
 			<div class="content col-sm-5">
 				
