--- a/index.html
+++ b/index.html
@@ -35,32 +35,31 @@ hr {
 }
 .title{
 	position: relative;
-
 	float: left;
-	padding: 40px 50px 10px 20px;
+	padding: 20px 0px 10px 80px;
 }
 .links{
 	position: relative;
 	float: left;
-	padding: 50px 40px 10px 20px;
+	padding: 50px 40px 10px 30px;
 }
 .image{
 	position: relative;
 	float: left;
 	border-left: 2px gray solid;
-	padding: 20px 10px 20px 30px;
+	padding: 25px 40px 20px 70px;
 }
 .content{
 	position: relative;
 	float: left;
 	margin: auto;
 	width:400px;
-    padding: 25px 40px 20px 20px;
+    padding: 25px 40px 20px 70px;
 }
 .container {
+	width: 750px;
 	margin-top: 70px;
-	margin-right: 70px;
-
+	margin-right: auto;
 	background-color: white;
 	padding: 20px 0px 20px 100px;
 }
