Links open in new tab

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ a:active {
 		</div>
 		<div class="row1">
 			<div class="links col-sm-3 text-right">
-				<p><a class="link" href="./Michael%20Wilson,%20Resume.pdf">Resume</a></p>
-				<p><a class="link" href="https://www.linkedin.com/in/michaelianwilson96">LinkedIn</a></p>
-				<p><a class="link" href="https://github.com/mwilson96">Github</a></p>
+				<p><a class="link" href="./Michael%20Wilson,%20Resume.pdf" target="blank">Resume</a></p>
+				<p><a class="link" href="https://www.linkedin.com/in/michaelianwilson96" target="blank">LinkedIn</a></p>
+				<p><a class="link" href="https://github.com/mwilson96" target="blank">Github</a></p>
 			</div>
 			<div class="image col-sm-2">
 				<img src="./picofme.jpg" alt="Michael Wilson" style="width:150px;height:150px">
