Added new bio and fixed sizing of the bio

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ hr {
 	position: relative;
 	float: left;
 	margin: auto;
-	width:400px;
-    padding: 25px 40px 20px 70px;
+	width:425px;
+    padding: 0px 40px 20px 70px;
 }
 .container {
 	width: 750px;
@@ -100,10 +100,10 @@ a:active {
 			<div class="content col-sm-5">
 				
 					<p>
-					I am a Computer Science student at Queen's University. I am currently in my third year studying Software Design.
+					I am a passionate and innovative student completing a Bachelor's degree in Computer Science specializing in Software Design at Queen's University.
 					<br>
 					<br>
-					Right now I am searching for a 12 or 16 month Software Development internship beginning in May of 2017.
+					I am actively seeking a 12 or 16-month internship commencing in May 2017 in order to refine my skillset and contribute to the overall success of a company by utilizing my strong interpersonal skills combined with my drive to succeed.
 					</p>
 				
 			</div>
