--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ hr {
 	float: left;
 	margin: auto;
 	width:425px;
-    padding: 0px 40px 20px 70px;
+    padding: 0px 40px 20px 80px;
 }
 .container {
 	width: 750px;
@@ -100,7 +100,7 @@ a:active {
 			<div class="content col-sm-5">
 				
 					<p>
-					I am a passionate and innovative student completing a Bachelor's degree in Computer Science specializing in Software Design at Queen's University.
+					I am a passionate and innovative student completing a Bachelor's degree in Computer Science, specializing in Software Design at Queen's University.
 					<br>
 					<br>
 					I am actively seeking a 12 or 16-month internship commencing in May 2017 in order to refine my skillset and contribute to the overall success of a company by utilizing my strong interpersonal skills combined with my drive to succeed.
