refined bio and centered divs

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ hr {
 .links{
 	position: relative;
 	float: left;
-	padding: 50px 40px 10px 20px;
+	padding: 60px 40px 10px 20px;
 }
 .image{
 	position: relative;
 	float: left;
 	border-left: 2px gray solid;
-	padding: 20px 10px 20px 30px;
+	padding: 30px 10px 20px 30px;
 }
 .content{
 	position: relative;
@@ -100,10 +100,10 @@ a:active {
 			<div class="content col-sm-5">
 				
 					<p>
-					I am a passionate and innovative student completing a Bachelor's degree in Computer Science, specializing in Software Design at Queen's University.
+					A passionate and innovative student completing a Bachelor's degree in Computer Science specializing in Software Design at Queen's University.
 					<br>
 					<br>
-					I am actively seeking a 12 or 16-month internship commencing in May 2017 in order to refine my skillset and contribute to the overall success of a company by utilizing my strong interpersonal skills combined with my drive to succeed.
+					Actively seeking a 12 or 16-month internship commencing in May 2017. I firmly believe that I will be an asset to any team and contribute to the overall success of a company by utilizing strong interpersonal skills combined with an innate desire to succeed.
 					</p>
 				
 			</div>
