--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ hr {
 .links{
 	position: relative;
 	float: left;
-	padding: 60px 40px 10px 20px;
+	padding: 45px 40px 10px 20px;
 }
 .image{
 	position: relative;
@@ -88,7 +88,8 @@ a:active {
 		</div>
 		<div class="row1">
 			<div class="links col-sm-3 text-right">
-				<p><a class="link" href="./Michael%20Wilson,%20Resume.pdf" target="_blank">Resume</a></p>
+				<p><a class="link" href="./index.html">About Me</a></p>
+				<p><a class="link" href="./resume1.html">Resume</a></p>
 				<p><a class="link" href="https://www.linkedin.com/in/michaelianwilson96" target="_blank">LinkedIn</a></p>
 				<p><a class="link" href="https://github.com/mwilson96" target="_blank">Github</a></p>
 			</div>
