--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ hr {
 	position: relative;
 	float: left;
 	padding: 45px 40px 10px 20px;
-}
+2}
 .image{
 	position: relative;
 	float: left;
@@ -47,8 +47,7 @@ hr {
 .content{
 	position: relative;
 	float: left;
-	margin: auto;
-	width:425px;
+	margin: auto;	width:425px;
     padding: 0px 40px 20px 80px;
 }
 .container {
@@ -82,7 +81,7 @@ a:active {
 	<div class="container">
 		<div class="row">
 			<div class="title col-sm-10">
-				<h2 style="color:#4169E1">Michael Wilson</h1>
+				<h2 style="color:#4169E1">Michael Wilson</h2>
 				<hr>
 			</div>
 		</div>
