--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ hr {
 2}
 .image{
 	position: relative;
-	float: left;
+>	float: left;
 	border-left: 2px gray solid;
 	padding: 30px 10px 30px 30px;
 }
@@ -81,7 +81,7 @@ a:active {
 	<div class="container">
 		<div class="row">
 			<div class="title col-sm-10">
-				<h2 style="color:#4169E1">Michael Wilson</h2>
+				<h2> style="color:#4169E1">Michael Wilson</h2>
 				<hr>
 			</div>
 		</div>
