--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ hr {
     border: 0;
     border-top: 2px solid #888;
     margin: 1em 0;
-    padding: 0; 
+    padding: 0;
 }
 .title{
 	position: relative;
@@ -81,7 +81,7 @@ a:active {
 	<div class="container">
 		<div class="row">
 			<div class="title col-sm-10">
-				<h2> style="color:#4169E1">Michael Wilson</h2>
+				<h2 style="color:#4169E1">Michael Wilson</h2>
 				<hr>
 			</div>
 		</div>
@@ -96,17 +96,17 @@ a:active {
 				<img src="./picofme.jpg" alt="Michael Wilson" style="width:150px;height:150px">
 			</div>
 			<div class="content col-sm-5">
-				
+
 					<p>
 					A passionate and innovative student completing a Bachelor's degree in Computer Science specializing in Software Design at Queen's University.
 					<br>
 					<br>
 					Actively seeking a 12 or 16-month internship commencing in May 2017. I firmly believe that I will be an asset to any team and contribute to the overall success of a company by utilizing strong interpersonal skills combined with an innate desire to succeed.
 					</p>
-				
+
 			</div>
 		</div>
-		
+
 	</div>
 </body>
 </html>
