Updated personal information

--- a/index.html
+++ b/index.html
@@ -3,110 +3,44 @@
 <head>
 	<title>Michael's Website</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<style>
-body {
-	background-color: lightgray;
-	min-width: 1000px;
-}
-p{
-	font-family: Tahoma, Geneva, sans-serif;
-}
-h2{
-	font-family: Tahoma, Geneva, sans-serif;
-}
-a{
-	font-family: Tahoma, Geneva, sans-serif;
-}
-hr {
-	color:gray solid;
-    display: block;
-    height: 0px;
-    border: 0;
-    border-top: 2px solid #888;
-    margin: 1em 0;
-    padding: 0;
-}
-.title{
-	position: relative;
-	float: left;
-	padding: 20px 0px 10px 80px;
-}
-.links{
-	position: relative;
-	float: left;
-	padding: 45px 40px 10px 20px;
-2}
-.image{
-	position: relative;
->	float: left;
-	border-left: 2px gray solid;
-	padding: 30px 10px 30px 30px;
-}
-.content{
-	position: relative;
-	float: left;
-	margin: auto;	width:425px;
-    padding: 0px 40px 20px 80px;
-}
-.container {
-	width: 750px;
-	margin-top: 70px;
-	margin-right: auto;
-	background-color: white;
-	padding: 20px 0px 20px 10px;
-}
-a:link {
-	color: #4169E1;
-    text-decoration: none;
-}
 
-a:visited {
-	color: #4169E1;
-    text-decoration: none;
-}
-
-a:hover {
-	color: #808080;
-    text-decoration: none;
-}
-
-a:active {
-	color: #FF0000;
-    text-decoration: none;
-}
-</style>
 <body>
 	<div class="container">
+
 		<div class="row">
 			<div class="title col-sm-10">
 				<h2 style="color:#4169E1">Michael Wilson</h2>
 				<hr>
 			</div>
 		</div>
+
 		<div class="row1">
+
 			<div class="links col-sm-3 text-right">
 				<p><a class="link" href="./index.html">About Me</a></p>
-				<p><a class="link" href="./resume1.html">Resume</a></p>
+				<p><a class="link" href="./resume.html">Resume</a></p>
 				<p><a class="link" href="https://www.linkedin.com/in/michaelianwilson96" target="_blank">LinkedIn</a></p>
 				<p><a class="link" href="https://github.com/mwilson96" target="_blank">Github</a></p>
 			</div>
+
 			<div class="image col-sm-2">
 				<img src="./picofme.jpg" alt="Michael Wilson" style="width:150px;height:150px">
 			</div>
+
 			<div class="content col-sm-5">
 
 					<p>
-					A passionate and innovative student completing a Bachelor's degree in Computer Science specializing in Software Design at Queen's University.
+					A passionate and innovative student. I am currently completing my fourth year at Queen’s University, and will be graduating in spring 2018 with an Honours Bachelor of Computer Science with a specialization in Software Design.
 					<br>
 					<br>
-					Actively seeking a 12 or 16-month internship commencing in May 2017. I firmly believe that I will be an asset to any team and contribute to the overall success of a company by utilizing strong interpersonal skills combined with an innate desire to succeed.
+					Actively seeking a full time position as a Front-End Developer commencing May 2018. I firmly believe that I will be an asset to any team and contribute to the overall success of a company by utilizing strong interpersonal skills combined with an innate desire to succeed.
 					</p>
 
 			</div>
-		</div>
 
+		</div>
 	</div>
 </body>
 </html>
